# python-streamdeck-plugin-sdk-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
streamdeck_cli/: __main__.py
streamdeck_cli/commands/: create.py  validate.py
streamdeck_cli/commands/pack/: __init__.py  autoversion.py  zip.py
streamdeck_cli/models/: manifest.py
streamdeck_cli/utils/: _version.py
tests/pack/autoversion/: test_get_versioned_output_dirpath.py
tests/pack/zip/: test_archive_plugin_files.py  test_get_packignore_specification.py  test_walk_filtered_plugin_files.py
